[gd_scene load_steps=21 format=3 uid="uid://djb4ki52ikc83"]

[ext_resource type="Script" path="res://Scenes/Enemies/type_2 (zombie)/enemy_2.gd" id="1_p7bxl"]
[ext_resource type="Texture2D" uid="uid://cbigm11gsejv6" path="res://Art/Sprites/zomber-ezgif.com-gif-to-sprite-converter.png" id="1_qg3b6"]
[ext_resource type="Texture2D" uid="uid://g4honrywmyl0" path="res://Art/bloodstain.png" id="3_yu1jv"]
[ext_resource type="Texture2D" uid="uid://csdr5o73ew1ew" path="res://Art/Sprites/murder2.png" id="4_sp57l"]
[ext_resource type="AudioStream" uid="uid://bw6g05jdqu351" path="res://Sounds/ImpactFleshy.mp3" id="5_h5hre"]
[ext_resource type="AudioStream" uid="uid://ojlxf6142fky" path="res://Sounds/MonsterNoises/Zombie gurg.mp3" id="6_jg2vl"]
[ext_resource type="AudioStream" uid="uid://ctt00pd6o0hvh" path="res://Sounds/MonsterNoises/ZombieDeath.mp3" id="7_dx6yt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_utuk2"]
radius = 0.950725
height = 2.46306

[sub_resource type="CylinderShape3D" id="CylinderShape3D_j3j4w"]
height = 6.24988
radius = 2.27267

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7k3gf"]
radius = 0.999349
height = 3.31298

[sub_resource type="AtlasTexture" id="AtlasTexture_wca1u"]
atlas = ExtResource("1_qg3b6")
region = Rect2(0, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkj04"]
atlas = ExtResource("1_qg3b6")
region = Rect2(640, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_u22uq"]
atlas = ExtResource("1_qg3b6")
region = Rect2(1280, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8d4x"]
atlas = ExtResource("1_qg3b6")
region = Rect2(1920, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg8ho"]
atlas = ExtResource("1_qg3b6")
region = Rect2(2560, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_h08e4"]
atlas = ExtResource("1_qg3b6")
region = Rect2(0, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_y600q"]
atlas = ExtResource("1_qg3b6")
region = Rect2(640, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_757vg"]
atlas = ExtResource("1_qg3b6")
region = Rect2(1280, 640, 640, 640)

[sub_resource type="SpriteFrames" id="SpriteFrames_35b8c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wca1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkj04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u22uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8d4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg8ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h08e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y600q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_757vg")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_xaj85"]
radius = 5.17512

[node name="Enemy_2" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.177649, 0)
collision_layer = 8
collision_mask = 258
axis_lock_angular_x = true
axis_lock_angular_y = true
script = ExtResource("1_p7bxl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40071, 0)
shape = SubResource("CapsuleShape3D_utuk2")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="Player_Detect" type="Area3D" parent="."]
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player_Detect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57946, 0)
shape = SubResource("CylinderShape3D_j3j4w")

[node name="Weapon_Detect" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 8
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="Weapon_Detect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.941313, 0)
shape = SubResource("CapsuleShape3D_7k3gf")

[node name="DmgTimer" type="Timer" parent="Weapon_Detect"]
wait_time = 0.5
one_shot = true

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -0.0702655, 1.13111, -0.152223)
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_35b8c")
autoplay = "default"
frame_progress = 0.18904

[node name="Follow_Player" type="Area3D" parent="."]
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Follow_Player"]
shape = SubResource("SphereShape3D_xaj85")

[node name="Death" type="Sprite3D" parent="."]
transform = Transform3D(3.3, 0, 0, 0, 3.3, 0, 0, 0, 3.3, 0, 1.78063, 0)
visible = false
billboard = 2
texture_filter = 0
texture = ExtResource("3_yu1jv")

[node name="DeathHuman" type="Sprite3D" parent="."]
transform = Transform3D(3.3, 0, 0, 0, 3.3, 0, 0, 0, 3.3, 0, 0.5878, 0)
visible = false
billboard = 2
texture_filter = 0
texture = ExtResource("4_sp57l")

[node name="Hit" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.50146, -0.888739)
stream = ExtResource("5_h5hre")
volume_db = 3.75

[node name="Rah" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.50146, -0.888739)
stream = ExtResource("6_jg2vl")
volume_db = 3.75

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.50146, -0.888739)
stream = ExtResource("7_dx6yt")
volume_db = 3.75

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="Player_Detect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_entered" from="Weapon_Detect" to="." method="_on_weapon_detect_body_entered"]
[connection signal="timeout" from="Weapon_Detect/DmgTimer" to="." method="_on_dmg_timer_timeout"]
[connection signal="body_entered" from="Follow_Player" to="." method="_on_follow_player_body_entered"]
[connection signal="body_exited" from="Follow_Player" to="." method="_on_follow_player_body_exited"]
